# syl-sha1

./: CHANGELOG.md  LICENSE  README.md  flake.nix  fourmolu.yaml  syl-sha1.cabal
src/: Main.hs  SHA1.hs  SHA3.hs
