cabal-version:      3.4
name:               syl-sha1
version:            0.0.1
license:            BSD-3-Clause
license-file:       LICENSE
author:             Seth Livy
maintainer:         no-reply@goarmy.com
category:           Cryptography
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -funfolding-use-threshold=16 -O2 -optc-O3 -Wall
library
    import:           warnings
    exposed-modules:  SHA1
    build-depends: 
      base >=4.2 && <=5,
      bv,
      bytestring
    hs-source-dirs:   src
    default-language: Haskell2010
executable sha1
    import:           warnings
    exposed-modules:  SHA1
    main-is: Main.hs
    build-depends: 
      base >=4.2 && <=5,
      bv,
      bytestring
    hs-source-dirs:   src
    default-language: Haskell2010
